--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,7 +36,8 @@ jobs:
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
-
+      - run: git config --global user.email "pkgdown-builder@github.com"
+      - run: git config --global user.name "pkgdown-builder"
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
