Added git config for r cmd check. Updated installation instructions on README.

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -42,6 +42,8 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
+      - run: git config --global user.email "r-cmd-check@github.com"
+      - run: git config --global user.name "r-cmd-check"
 
       - uses: r-lib/actions/check-r-package@v2
         with:
