--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
     person("Agnes", "Kim", , "agnes@a2-ai.com", role = "aut"),
     person("Anne", "Zheng", , "anne@a2-ai.com", role = "aut"),
     person("Jenna", "Johnson", , "jenna@a2-ai.com", role = "aut"),
-    person("Fenando", "Carreno", , "fernando.o.carreno@gsk.com", role = "ctb"),
+    person("Fernando", "Carreno", , "fernando.o.carreno@gsk.com", role = "ctb"),
     person("Kashyap", "Patel", , "kashyap.x.patel@gsk.com", role = "ctb"),
     person("Maxwell", "Chirehwa", , "maxwell.t.chirehwa@gsk.com", role = "ctb"),
     person("Wesley", "Cummings", , "wes@a2-ai.com", role = "ctb"),
