--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,12 +1,10 @@
 url: https://a2-ai.github.io/reportifyr/
-
 template:
   bootstrap: 5
   bslib:
-    bg: "#FFFFFF"
-    fg: "#63666A"
-    primary: "#1E63AF"
-
+    bg: '#FFFFFF'
+    fg: '#63666A'
+    primary: '#1E63AF'
 navbar:
   title: reportifyr
   bg: primary
@@ -41,7 +39,6 @@ navbar:
     github:
       icon: fa-github fa-lg
       href: https://github.com/a2-ai/reportifyr
-
 reference:
 - title: Set-up Functions
   contents:
@@ -77,5 +74,5 @@ reference:
   - validate_object
   - toggle_logger
 - title: Reportifyr Summary
-  contents:
-  - reportifyr
+  contents: reportifyr
+
