--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: reportifyr
-Title: Create reproducible reports with quarto and word 
-Version: 0.2.5
+Title: Reproducible Reporting Made Simple in R
+Version: 0.2.6
 Authors@R: c(
     person("Jacob", "Dumbleton", , "jacob@a2-ai.com", role = c("aut", "cre")),
     person("Matthew", "Smith", , "matthews@a2-ai.com", role = "aut"),
@@ -16,7 +16,7 @@ Authors@R: c(
     person("Wesley", "Cummings", , "wes@a2-ai.com", role = "ctb"),
     person("Elizabeth", "LeBeau", ,"elizabeth@a2-ai.com", role = "ctb")
   )
-Description: A tool to extend quarto's ability to be a starting point for fully featured word reports. 
+Description: Create reproducible reports with Microsoft Word and R.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -47,5 +47,4 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 LazyData: true
-VignetteBuilder: knitr
 URL: https://a2-ai.github.io/reportifyr/
