added validate_config docs and upated namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(remove_tables_figures_footnotes)
 export(save_rds_with_metadata)
 export(toggle_logger)
 export(update_object_footnotes)
+export(validate_config)
 export(validate_object)
 export(write_csv_with_metadata)
 export(write_object_metadata)
