updated uv_path detection and messaging around version. get_uv_path no longer stops. updated messaging around loading

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(add_plots)
 export(add_tables)
 export(build_report)
 export(finalize_document)
+export(fit_flextable_to_page)
 export(format_flextable)
 export(get_meta_abbrevs)
 export(get_meta_type)
