added report to gitignore to prevent unwanted commits

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,6 @@ inst/doc
 /doc/
 docs
 .venv
-
+report
 
 inst/scripts/__pycache__
-inst/scripts/test.R
-inst/scripts/*.docx
-inst/scripts/.DS_Store
-inst/scripts/figure
-inst/scripts/table
