updated helper to use config or defaults. validate config added to add_footnotes

--- a/inst/extdata/config.yaml
+++ b/inst/extdata/config.yaml
@@ -1,8 +1,7 @@
 footnotes_font: "Arial Narrow"
 footnotes_font_size: 10
-
 use_object_path_as_source: FALSE
-wrap_path_in_[]: FALSE
+wrap_path_in_[]: TRUE
 footnote_order:
   - Source
   - Object
