--- a/inst/extdata/config.yaml
+++ b/inst/extdata/config.yaml
@@ -1,3 +1,7 @@
+report_dir_name: "report"
+
+outputs_dir_name: "OUTPUTS"
+
 footnotes_font: "Arial Narrow"
 footnotes_font_size: 10
 use_object_path_as_source: FALSE
