added docs for sync. added quiet arg to toggle_logger to suppress messaging onLoad

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(preview_metadata)
 export(preview_metadata_files)
 export(remove_tables_figures_footnotes)
 export(save_rds_with_metadata)
+export(sync_report_project)
 export(toggle_logger)
 export(update_object_footnotes)
 export(validate_config)
