--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(sync_report_project)
 export(toggle_logger)
 export(update_object_footnotes)
 export(validate_config)
+export(validate_docx)
 export(validate_object)
 export(write_csv_with_metadata)
 export(write_object_metadata)
