--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(fit_flextable_to_page)
 export(format_flextable)
 export(get_meta_abbrevs)
 export(get_meta_type)
+export(get_venv_uv_paths)
 export(ggsave_with_metadata)
 export(initialize_python)
 export(initialize_report_project)
@@ -22,6 +23,7 @@ export(toggle_logger)
 export(update_object_footnotes)
 export(validate_config)
 export(validate_docx)
+export(validate_input_args)
 export(validate_object)
 export(write_csv_with_metadata)
 export(write_object_metadata)
