--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export(add_footnotes)
 export(add_plots)
+export(add_plots_alt_text)
 export(add_tables)
+export(add_tables_alt_text)
 export(build_report)
 export(finalize_document)
 export(fit_flextable_to_page)
