added magic string alt-text check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(save_rds_with_metadata)
 export(sync_report_project)
 export(toggle_logger)
 export(update_object_footnotes)
+export(validate_alt_text_magic_strings)
 export(validate_config)
 export(validate_docx)
 export(validate_input_args)
