fixed devtools check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ export(add_plots_alt_text)
 export(add_tables)
 export(add_tables_alt_text)
 export(build_report)
+export(build_reviewer_guide)
 export(finalize_document)
 export(fit_flextable_to_page)
 export(format_flextable)
+export(get_input_datasets)
 export(get_meta_abbrevs)
 export(get_meta_type)
 export(get_venv_uv_paths)
