added nonmem input/output function - need to tie to build_report somehow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(format_flextable)
 export(get_input_datasets)
 export(get_meta_abbrevs)
 export(get_meta_type)
+export(get_mod_io_paths)
 export(get_venv_uv_paths)
 export(ggsave_with_metadata)
 export(initialize_python)
