--- a/rproject.toml
+++ b/rproject.toml
@@ -5,10 +5,11 @@ name = "reportifyr"
 r_version = "4.4"
 
 repositories = [
-	{ alias = "PRISM", url = "https://prism.dev.a2-ai.cloud/rpkgs/stratus/2025-05-09" },
+	#{ alias = "PRISM", url = "https://prism.dev.a2-ai.cloud/rpkgs/stratus/2025-05-09", force_source = true},
+	{ alias = "ppm", url = "https://packagemanager.posit.co/cran/latest"}
 ]
 
 dependencies = [
 	"devtools",
-	{name = "reportifyr", path = ".", dependencies_only = true, install_suggestions = true },
+	{name = "reportifyr", path = ".", dependencies_only = true, install_suggestions = true},
 ]
