--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,7 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: main
+    branches: [main, windows]
   pull_request:
     branches: main
 
@@ -23,6 +23,8 @@ jobs:
           - {os: ubuntu-latest,  r: '4.5'}
           - {os: ubuntu-latest,  r: '4.4'}
           - {os: ubuntu-latest,  r: '4.3'}
+          - {os: macos-latest, r: '4.5'}
+          - {os: windows-latest, r: '4.5'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
