--- a/rproject.toml
+++ b/rproject.toml
@@ -5,11 +5,11 @@ name = "reportifyr"
 r_version = "4.4"
 
 repositories = [
-	{ alias = "PRISM", url = "https://prism.dev.a2-ai.cloud/rpkgs/stratus/2025-07-28/" },
+	#{ alias = "PRISM", url = "https://prism.dev.a2-ai.cloud/rpkgs/stratus/2025-07-28/" },
+	{alias = "ppm", url = "https://packagemanager.posit.co/cran/latest"},
 ]
 
 dependencies = [
 	"devtools",
-	{name = "yaml", force_source = true },
 	{name = "reportifyr", path = ".", dependencies_only = true, install_suggestions = true },
 ]
