--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,5 +28,6 @@ export(validate_config)
 export(validate_docx)
 export(validate_object)
 export(write_csv_with_metadata)
+export(write_enhanced_object_metadata)
 export(write_object_metadata)
 importFrom(rlang,.data)
